# ai-practice-partner

./: .gitignore  DESIGN.md  README.md  agent_flow.md  mypy.ini  pyproject.toml
agent/: decision_engine.md  input_parser.md  pipeline.md
ai_practice_partner/: __init__.py  types.py
ai_practice_partner/agent/: __init__.py  decision_engine.py  input_parser.py  pipeline.py
ai_practice_partner/data/: __init__.py  mood_profiles.py  sample_sets.py
ai_practice_partner/export/: __init__.py  export_plan.py
ai_practice_partner/music/: __init__.py  bass.py  chords.py  drums.py
ai_practice_partner/utils/: __init__.py  helpers.py
api/: routes.md
data/: mood_profiles.md  sample_sets.md
docs/: architecture_notes.md
export/: export_outline.md
music/: bass.md  chords.md  drums.md
tests/: test_bass.py  test_chords.py  test_data_models.py  test_decision_engine.py  test_drums.py  test_export.py  test_helpers.py  test_input_parser.py  test_pipeline.py
utils/: helpers.md
